# xmos-template

./: .gitmodules  CMakeLists.txt  XVF3610_Q60A.xn
docs/: XMOS.docx  ~$XMOS.docx
scripts/: build.sh  debug.sh  run.sh
src/: main.c  main.xc  pipeline.c  pipeline_config.h  pipeline_state.h  test_wav.c
src/aec/: aec_memory_pool.h  aec_process_frame_1thread.c
src/delay_buffer/: delay_buffer.c  delay_buffer.h
src/file_utils/: fileio.c  fileio.h  wav_utils.c  wav_utils.h
src/pipeline_stage_1/: stage_1.c  stage_1.h
